Issue #SB-23172 -  In Location popup,Select State & Select District text is not visible

--- a/src/app/client/src/assets/styles/themes.scss
+++ b/src/app/client/src/assets/styles/themes.scss
@@ -1750,14 +1750,14 @@ html[data-theme=Darkmode] {
     }
 
     .btn-info {
-      background: #ffd92a !important;
-      color: #222 !important;
-
+      background: transparent !important;
+      color: #fff !important;
+      border: 0px solid red !important;
       &:hover {
-        background: #f3a819;
+        background: #F3A819 !important;
+        color: #333 !important;
       }
     }
-
     .lib-chat-footer .send-btn img {
       filter: invert(1);
     }
@@ -2884,7 +2884,7 @@ html[accessable-theme="accessible"] {
 
   .schooling-location {
     .multi-select-container .list-border .placeholder {
-      color: #f2f2f2 !important;
+      color: var(--black) !important;
     }
   }
 
